Fix welcome screen icon alignment

--- a/src/resources/src/scss/_welcome.scss
+++ b/src/resources/src/scss/_welcome.scss
@@ -17,6 +17,7 @@
     svg {
         width: 120px;
         height: 120px;
+        margin: auto;
     }
 }
 
